JEDIT 4.1 VERSION HISTORY

* Version 4.1pre11

Thanks to Stefan Kost for contributing to this release.

+ Enhancements:

- "BeanShell Error" dialog box now shows the full traceback, not just
  the exception message.

- Some minor optimizations.

+ Bug Fixes:

- Minor fix to BibTeX syntax highlighting (Stefan Kost).

- jEditLauncher was not being correctly installed on Windows.

- Fixed accidental AbstractOptionPane API breakage.

- FileVFS._mkdir() did not send the correct VFSUpdates if more than one
  nested directory had to be created.

+ API Additions:

- Added Buffer.invalidateCachedFoldLevels() method needed by SideKick
  plugin.

* Version 4.1pre10

Thanks to Kris Kopicki and Oliver Rutherfurd for contributing to this
release.

+ Enhancements:

- Divider position in Global Options dialog box is now saved.

- Minor improvement to Python auto indent (Oliver Rutherfurd).

- Invocations of 'Delete Line' are now undone one at a time.

- Documentation updates.

- FAQ updates (Kris Kopicki).

- API documentation generated with javadoc is now included. A custom
  doclet is used to generate a tree view for the help viewer.

- The installer now packs .tar.bz2 archives instead of storing files in
  the JAR directly. Now that javadocs have been added to the core
  distribution, the old installer balooned to 2.7Mb; the new installer
  is only 1.4Mb.

  To implement this the installer uses the org.apache.excalibur.bzip2
  and com.ice.tar libraries. Licensing info and home page links can be
  found in README.txt.

+ Bug Fixes:

- Stricter checks for windows being out-of-bounds.

- The text area no longer falls over if an exception is thrown while
  firing a caret or scroll event.

- Saving a file within jEdit will refresh the directory search file list
  if necessary.

- The Format Paragraph command was once again broken on Java 1.3.

- Installer's "auto" mode works now. The command line syntax has
  changed:

  java installer.Install auto <install directory>